[package]
name = "make-wallet"
description = "make an ethereum wallet. put the mnemonic in whatever file you want."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.22"
ethers-core = "0.17.0"
ethers-signers = "0.17.0"
rand = "0.8.1"
